<resources>
    <string name="app_name">UPay</string>


    <string name="nombre">Nombre</string>

    <string name="Error_campo_obligatorio">Campo Obligatorio</string>
    <string name="Seleccina_algún_campo">Selecciona campo</string>
    <string name="Selecciona_carrera">Selecciona tu carrera</string>
    <string name="title_activity_perfil">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="show_dialog">Show dialog</string>
    <string name="Abonar_Credito">Abonar Credito</string>
    <string name="monto">Monto</string>
    <string name="password">Password</string>
    <string name="login_label">Login</string>
    <string name="success_login_msg">Login successful</string>
    <string name="error_login_msg">Please fill any empty fields</string>
    <string name="selecciona_tramite">Seleccione un trámite</string>
    <string name="no_cuenta">No.Cuenta:</string>
    <string name="generar_ficha_pago">Generar ficha pago</string>
    <string name="alumno">Alumno:</string>
    <string name="carrera">Carrera:</string>

    <string name="title_activity_menu_bar">menu_bar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tramites">VENTANA DE TRAMITES</string>
    <string name="informacion">VENTANA DE INFORMACION</string>
    <string name="estado_cuenta">VENTANA DE ESTADO DE CUENTA</string>
    <string name="ajustes">VENTANA DE TRÁMITES</string>
    <string name="programadorA">Marcos Uriel Trejo Velázquez</string>
    <string name="programadorB">Giovanni Solano Segura</string>
    <string name="version">2.0</string>
    <string name="Upemor">Universidad Politécnica del Estado de Morelos</string>
    <string name="telefono">Teléfono: 045 7771877037</string>
    <string name="correo">Email: tvmo160357@upemor.edu.mx</string>
    <string name="pagina">http://upay-com.sites.stackstaging.com</string>
    <string name="descripcion_cel">Celular con logotipo Android</string>
    <string name="descripcion_camara">icono de camara negro</string>
    <string name="accesoInfo">Última fecha de acceso:</string>
    <string name="Realizar_tramite">Realizar trámite</string>
    <string name="Historial_movimientos">Historial de movimientos</string>
    <string name="metodos_pago">Métodos de pago</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Comentarios">Comentarios</string>
    <string name="Informacion">Acerca de UPay</string>
    <string name="channel_name">notificaciones</string>
    <string name="channel_description">canal de notificaciones para activación de cuentas</string>

</resources>
