<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padd"
    android:background="@color/ColorActionBarTitle"
    tools:context=".fragment_informacion">

    <!-- TODO: Update blank fragment layout -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ironLight"
                    android:text="CREDITOS Y SOPORTE"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="3dp"
                    >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/acercaDe_topSpace"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/acercaDe_size_titles"
                    android:gravity="center"
                    android:text="Desarrolladores:"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:text="@string/programadorA"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:text="@string/programadorB"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/acercaDe_size_titles"
                    android:gravity="center"
                    android:text="Versión:"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:gravity="center"
                    android:text="@string/version"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/acercaDe_size_titles"
                    android:gravity="center"
                    android:text="Diseño y logotipos:"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:gravity="center"
                    android:text="@string/Upemor"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/acercaDe_size_titles"
                    android:gravity="center"
                    android:text="Contacto:"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:gravity="center"
                    android:text="@string/telefono"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:gravity="center"
                    android:text="@string/correo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="@dimen/acercaDe_size"
                        android:gravity="center"
                        android:text="Sitio web:"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/acercaDe_size"
                    android:gravity="center"
                    android:text="@string/pagina"
                    android:autoLink="web"
                    android:textColorLink="@color/link"/>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/img_cel"
                        android:contentDescription="@string/descripcion_cel"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

</FrameLayout>