<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padd"
    android:background="@color/ColorActionBarTitle"
    tools:context=".fragment_home">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padd">

        <TextView
            android:id="@+id/txtAcceso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/accesoInfo"
            android:gravity="center"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/ironLight"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TableRow>

        <ImageView
            android:id="@+id/btnTramites"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Realizar_tramite"
            />

                <ImageView
                    android:id="@+id/btnHistorial"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="40dp"
                    android:contentDescription="@string/Historial_movimientos"
                    android:layout_marginStart="40dp"
                    />

            </TableRow>

            <TableRow
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/home_left_space"
                    android:text="Realizar Tramite"
                    android:layout_marginStart="@dimen/home_left_space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"

                    android:text="Historial de movimientos"
                    android:layout_marginStart="40dp" />

            </TableRow>
            <TableRow
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/btnMetodos"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/metodos_pago"/>

                <ImageView
                    android:id="@+id/btnAyuda"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:contentDescription="@string/Ayuda"/>

            </TableRow>


            <TableRow
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/home_left_space"
                    android:text="Métodos de pago"
                    android:layout_marginStart="@dimen/home_left_space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"

                    android:text="Ayuda"
                    android:layout_marginStart="40dp" />

            </TableRow>
            <TableRow
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/btnComentarios"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/Comentarios"/>

                <ImageView
                    android:id="@+id/btnInformacion"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/informa"
                    android:layout_marginStart="40dp"
                    android:contentDescription="@string/Informacion"/>

            </TableRow>

            <TableRow
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/home_left_space"
                    android:text="Comentarios"
                    android:layout_marginStart="@dimen/home_left_space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"

                    android:text="Acerca de UPay"
                    android:layout_marginStart="40dp" />

            </TableRow>




        </TableLayout>



        </LinearLayout>

    </ScrollView>

</FrameLayout>